--- a/index.html
+++ b/index.html
@@ -1795,13 +1795,13 @@
                                     <a href="#" target="_blank" class="elementor-item">Marketplace</a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289 iconMenu">
-                                    <a href="https://t.me/corepunknft" target="_blank">
+                                    <a href="#" target="_blank">
                                     <span class="elementor-screen-only">Telegram</span>
                                     <i class="fab fa-telegram"></i>
                                     </a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289 iconMenu">
-                                    <a href="https://twitter.com/CorePunk3" target="_blank">
+                                    <a href="#" target="_blank">
                                     <span class="elementor-screen-only">Twitter</span>
                                     <i class="fab fa-twitter"></i>
                                     </a>
