--- a/index.html
+++ b/index.html
@@ -2020,13 +2020,13 @@
                               <span class="elementor-headline-dynamic-text"> IMPROVEMENT<br /> </span>
                               </span>
                               <br />
-                              <span class="elementor-headline-plain-text elementor-headline-text-wrapper">Core's First Nft Token</span>
+                              <span class="elementor-headline-plain-text elementor-headline-text-wrapper">Conflux Punk Nft Token</span>
                            </h3>
                         </div>
                      </div>
                      <div class="elementor-element elementor-element-ec415fb elementor-widget elementor-widget-text-editor" data-id="ec415fb" data-element_type="widget" data-widget_type="text-editor.default">
                         <div class="elementor-widget-container">
-                           <p>Mint to Earn</br> Core NFT Token</p>
+                           <p>Mint to Earn</br>Conflux Punk NFT Token</p>
                         </div>
                      </div>
                      <div class="intro-buttons">
