--- a/index.html
+++ b/index.html
@@ -2217,7 +2217,7 @@
                            </div>
                            <div class="elementor-element elementor-element-ddaef09 elementor-widget elementor-widget-text-editor" data-id="ddaef09" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container">
-                                 <p>The first Core NFT platform oriented to the mass public. Accessible to Core Blockchain Users .</p>
+                                 <p>The first NFT platform oriented to the mass public. Accessible to Blockchain Users .</p>
                               </div>
                            </div>
                         </div>
@@ -2438,7 +2438,7 @@
                            </div>
                            <div class="elementor-element elementor-element-ec11dd3 elementor-widget elementor-widget-text-editor" data-id="ec11dd3" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container">
-                                 <p>The tokenomics and architecture of the $CPT is the core of the whole protocol. The token has a<span style="color: #fea505;"> fixed supply and no owner</span>, this ensures the safety and longevity of the protocol, and no need for taxes. The dApp usage burning mechanics will make the token scarce over time.  </p>
+                                 <p>The tokenomics and architecture of the $CPT is the whole protocol. The token has a<span style="color: #fea505;"> fixed supply and no owner</span>, this ensures the safety and longevity of the protocol, and no need for taxes. The dApp usage burning mechanics will make the token scarce over time.  </p>
                                  <h4 style="color: #fea505;">Name: Conflux Punk</br> 
                                                                Total Supply: 50,000,000</br> 
                                                                Public Sale: 90% </br> 
