--- a/index.html
+++ b/index.html
@@ -1795,13 +1795,13 @@
                                     <a href="#" target="_blank" class="elementor-item">Marketplace</a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289 iconMenu">
-                                    <a href="#" target="_blank">
+                                    <a href="https://t.me/confluxpunk" target="_blank">
                                     <span class="elementor-screen-only">Telegram</span>
                                     <i class="fab fa-telegram"></i>
                                     </a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289 iconMenu">
-                                    <a href="#" target="_blank">
+                                    <a href="https://twitter.com/confluxpunk" target="_blank">
                                     <span class="elementor-screen-only">Twitter</span>
                                     <i class="fab fa-twitter"></i>
                                     </a>
@@ -2031,7 +2031,7 @@
                      </div>
                      <div class="intro-buttons">
                         <div>
-                           <a href="#" target="_blank">
+                           <a href="https://t.me/confluxpunk" target="_blank">
                            <button class="btnPresale">Buy Tokens</button>
                            </a>
                         </div>
@@ -2070,7 +2070,8 @@
                         <div class="elementor-widget-container">
                            <h2 class="elementor-heading-title elementor-size-default custom-title">
                               BECOME A
-                              <span style="color: #fea505;">
+                              <span style="color: #f61ed9;">
+
                               <br />
                               CREATOR:
                               </span>
@@ -2125,7 +2126,7 @@
                         <div class="elementor-widget-container">
                            <h2 class="elementor-heading-title elementor-size-default">
                               MINT TO
-                              <span style="color: #fea505;">
+                              <span style="color: #f61ed9;">
                               <br />
                               EARN:
                               </span>
@@ -2433,21 +2434,21 @@
                         <div class="elementor-widget-wrap elementor-element-populated">
                            <div class="elementor-element elementor-element-f0f6454 elementor-widget elementor-widget-heading" data-id="f0f6454" data-element_type="widget" data-widget_type="heading.default">
                               <div class="elementor-widget-container">
-                                 <h2 class="elementor-heading-title elementor-size-default"><span style="color: #ffffff;">Core Punk</span><br /> TOKENOMICS</h2>
+                                 <h2 class="elementor-heading-title elementor-size-default"><span style="color: #f61ed9;">Conflux Punk</span><br /> TOKENOMICS</h2>
                               </div>
                            </div>
                            <div class="elementor-element elementor-element-ec11dd3 elementor-widget elementor-widget-text-editor" data-id="ec11dd3" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container">
                                  <p>The tokenomics and architecture of the $CPT is the whole protocol. The token has a<span style="color: #fea505;"> fixed supply and no owner</span>, this ensures the safety and longevity of the protocol, and no need for taxes. The dApp usage burning mechanics will make the token scarce over time.  </p>
-                                 <h4 style="color: #fea505;">Name: Conflux Punk</br> 
-                                                               Total Supply: 50,000,000</br> 
+                                 <h4 style="color: #f61ed9;">Name: Conflux Punk</br> 
+                                                               Total Supply: 10,000,000,000</br> 
                                                                Public Sale: 90% </br> 
                                                                Stake2earn: 5%</br> 
                                                                Mint2earn: 4%</br> 
                                                                Investor Airdrop: 1%</br> </br> 
                                                                Tax</br> 
-                                                               Buy tax: 3%</br> 
-                                                               Sell tax: 5%</h4>
+                                                               Buy tax: 4%</br> 
+                                                               Sell tax: 4%</h4>
                               </div>
                            </div>
                         </div>
@@ -3014,7 +3015,7 @@
                                  <h2 class="elementor-heading-title elementor-size-default"><span style="color: #ffff;">Find us on</span> Icecream Swap</h2>
                               </div>
                            </div>
-                           <section
+                           <!--<section
                               class="elementor-section elementor-inner-section elementor-element elementor-element-b007180 elementor-section-boxed elementor-section-height-default elementor-section-height-default "
                               data-id="b007180"
                               data-element_type="section"
@@ -3051,7 +3052,7 @@
                                     </div>
                                     <div>
                                        <div class="btnHero onlyPhone">
-                                          <a href="#" target="_blank">
+                                          <a href="https://t.me/confluxpunk" target="_blank">
                                           <button class="btnPresale">Join Launch</button>
                                           </a>
                                        </div>
@@ -3059,7 +3060,7 @@
                                  </div>
                                  
                               </div>
-                           </section>
+                           </section>-->
                            <section
                               class="elementor-section elementor-inner-section elementor-element elementor-element-dbab8de elementor-section-boxed elementor-section-height-default elementor-section-height-default hideMe"
                               data-id="dbab8de"
@@ -3166,13 +3167,13 @@
                         <div class="elementor-widget-container">
                            <div class="elementor-social-icons-wrapper elementor-grid">
                               <span class="elementor-grid-item">
-                              <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-0ff1cea" href="" target="_blank">
+                              <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-0ff1cea" href="https://t.me/confluxpunk" target="_blank">
                               <span class="elementor-screen-only">Telegram</span>
                               <i class="fab fa-telegram"></i>
                               </a>
                               </span>
                               <span class="elementor-grid-item">
-                              <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-377ab7a" href="" target="_blank">
+                              <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-377ab7a" href="https://twitter.com/confluxpunk" target="_blank">
                               <span class="elementor-screen-only">Twitter</span>
                               <i class="fab fa-twitter"></i>
                               </a>
