--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <title>Conflux Punk</title>
+     <title> Galactic Punk</title>
       <meta name="robots" content="max-image-preview:large" />
       <meta name="description" content="Core NFT Marketplace">
       <!-- Google tag (gtag.js) -->
@@ -1795,13 +1795,13 @@
                                     <a href="#" target="_blank" class="elementor-item">Marketplace</a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289 iconMenu">
-                                    <a href="https://t.me/confluxpunk" target="_blank">
+                                    <a href="" target="_blank">
                                     <span class="elementor-screen-only">Telegram</span>
                                     <i class="fab fa-telegram"></i>
                                     </a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289 iconMenu">
-                                    <a href="https://twitter.com/confluxpunk" target="_blank">
+                                     <a href="" target="_blank">
                                     <span class="elementor-screen-only">Twitter</span>
                                     <i class="fab fa-twitter"></i>
                                     </a>
@@ -2013,7 +2013,7 @@
                         >
                         <div class="elementor-widget-container">
                            <h3 class="elementor-headline elementor-headline-animation-type-blinds elementor-headline-letters">
-                              <span class="elementor-headline-plain-text elementor-headline-text-wrapper">Conflux Punk<br /></span>
+                              <span class="elementor-headline-plain-text elementor-headline-text-wrapper">Galactic Punk<br /></span>
                               <span class="elementor-headline-dynamic-wrapper elementor-headline-text-wrapper">
                               <span class="elementor-headline-dynamic-text elementor-headline-text-active"> INNOVATION&nbsp; </span>
                               <span class="elementor-headline-dynamic-text"> REVOLUTION </span>
@@ -2026,12 +2026,12 @@
                      </div>
                      <div class="elementor-element elementor-element-ec415fb elementor-widget elementor-widget-text-editor" data-id="ec415fb" data-element_type="widget" data-widget_type="text-editor.default">
                         <div class="elementor-widget-container">
-                           <p>Mint to Earn</br>Conflux Punk NFT Token</p>
+                           <p>Mint to Earn</br>Galactic Punk</p>
                         </div>
                      </div>
                      <div class="intro-buttons">
                         <div>
-                           <a href="https://t.me/confluxpunk" target="_blank">
+                           <a href="" target="_blank">
                            <button class="btnPresale">Buy Tokens</button>
                            </a>
                         </div>
@@ -2141,10 +2141,10 @@
                      <div class="elementor-element elementor-element-d369edf elementor-widget elementor-widget-text-editor" data-id="d369edf" data-element_type="widget" data-widget_type="text-editor.default">
                         <div class="elementor-widget-container">
                            <p>
-                              Just hold $CPT in your wallet and connect to our dapp. From there you can choose from thousands of creations of our users in our Market. You can check how much you've accumulated and claim whenever you want.
+                              Just hold $GPT in your wallet and connect to our dapp. From there you can choose from thousands of creations of our users in our Market. You can check how much you've accumulated and claim whenever you want.
                            </p>
                            <p>
-                              The more $CPT you hold, the more profitable minting for you. 
+                              The more $GPT you hold, the more profitable minting for you. 
                            </p>
                         </div>
                      </div>
@@ -2404,13 +2404,13 @@
                            </div>
                            <div class="elementor-element elementor-element-85d4045 elementor-widget elementor-widget-text-editor" data-id="85d4045" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container noMarginContainer">
-                                 <p>Conflux Punk Sale will start on:</p>
-                                 <h4>February 24th, 2023 at 18:00 (UTC). </h4>
+                                <p> Galactic Punk Sale will start on:</p>
+                                 <h4>March 3rd, 2023 at 18:00 (UTC). </h4>
                                  <p>Don't be late!</p>
                               </div>
                               <div class="btnHero">
                                  <a href="#" target="_blank">
-                                 <button class="btnPresaleMid">BUY Conflux Punk TOKEN</button>
+                                 <button class="btnPresaleMid">BUY Galactic Punk TOKEN</button>
                                  </a>
                               </div>
                            </div>
@@ -2439,16 +2439,18 @@
                            </div>
                            <div class="elementor-element elementor-element-ec11dd3 elementor-widget elementor-widget-text-editor" data-id="ec11dd3" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container">
-                                 <p>The tokenomics and architecture of the $CPT is the whole protocol. The token has a<span style="color: #fea505;"> fixed supply and no owner</span>, this ensures the safety and longevity of the protocol, and no need for taxes. The dApp usage burning mechanics will make the token scarce over time.  </p>
-                                 <h4 style="color: #f61ed9;">Name: Conflux Punk</br> 
-                                                               Total Supply: 10,000,000,000</br> 
-                                                               Public Sale: 90% </br> 
-                                                               Stake2earn: 5%</br> 
-                                                               Mint2earn: 4%</br> 
-                                                               Investor Airdrop: 1%</br> </br> 
-                                                               Tax</br> 
-                                                               Buy tax: 4%</br> 
-                                                               Sell tax: 4%</h4>
+                                 <p>The tokenomics and architecture of the $GPT is the whole protocol. The token has a<span style="color: #fea505;"> fixed supply and no owner</span>, this ensures the safety and longevity of the protocol, and no need for taxes. The dApp usage burning mechanics will make the token scarce over time.  </p>
+                                 <h4 style="color: #f61ed9;">Tokenomics 📊 </br>
+Name:Galactic Punk </br>
+Total supply:50,000,000 
+90%public sale
+5%stake2earn
+4%mint2earn
+1%investor airdrop
+
+Tax
+Buy tax:3%
+Sell tax:5%</h4>
                               </div>
                            </div>
                         </div>
