--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
      <title> Galactic Punk</title>
       <meta name="robots" content="max-image-preview:large" />
-      <meta name="description" content="Core NFT Marketplace">
+      <meta name="description" content="NFT to earn">
       <!-- Google tag (gtag.js) -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-KB3B9CCZM9"></script>
       <script>
@@ -2040,7 +2040,7 @@
                            <button class="btnDapp">Launch Marketplace</button>
                            </a>
                            <a href="#" target="_blank">
-                           <button class="btnDapp">Mint</button>
+                           <button class="btnDapp">Claim Airdrop</button>
                            </a>
                         </div>
                      </div>
@@ -2434,22 +2434,22 @@
                         <div class="elementor-widget-wrap elementor-element-populated">
                            <div class="elementor-element elementor-element-f0f6454 elementor-widget elementor-widget-heading" data-id="f0f6454" data-element_type="widget" data-widget_type="heading.default">
                               <div class="elementor-widget-container">
-                                 <h2 class="elementor-heading-title elementor-size-default"><span style="color: #f61ed9;">Conflux Punk</span><br /> TOKENOMICS</h2>
+                                 <h2 class="elementor-heading-title elementor-size-default"><span style="color: #f61ed9;">Conflux Punk</span><br /> Tokenomics 📊 </h2>
                               </div>
                            </div>
                            <div class="elementor-element elementor-element-ec11dd3 elementor-widget elementor-widget-text-editor" data-id="ec11dd3" data-element_type="widget" data-widget_type="text-editor.default">
                               <div class="elementor-widget-container">
                                  <p>The tokenomics and architecture of the $GPT is the whole protocol. The token has a<span style="color: #fea505;"> fixed supply and no owner</span>, this ensures the safety and longevity of the protocol, and no need for taxes. The dApp usage burning mechanics will make the token scarce over time.  </p>
-                                 <h4 style="color: #f61ed9;">Tokenomics 📊 </br>
+                                 <h4 style="color: #f61ed9;">
 Name:Galactic Punk </br>
-Total supply:50,000,000 
-90%public sale
-5%stake2earn
-4%mint2earn
-1%investor airdrop
+Total supply:50,000,000 </br>
+90%public sale</br>
+5%stake2earn</br>
+4%mint2earn</br>
+1%investor airdrop</br>
 
 Tax
-Buy tax:3%
+Buy tax:3%</br>
 Sell tax:5%</h4>
                               </div>
                            </div>
@@ -3054,7 +3054,7 @@ Sell tax:5%</h4>
                                     </div>
                                     <div>
                                        <div class="btnHero onlyPhone">
-                                          <a href="https://t.me/confluxpunk" target="_blank">
+                                          <a href="" target="_blank">
                                           <button class="btnPresale">Join Launch</button>
                                           </a>
                                        </div>
@@ -3153,7 +3153,7 @@ Sell tax:5%</h4>
                   <div class="elementor-widget-wrap elementor-element-populated">
                      <div class="elementor-element elementor-element-5b4a3ea elementor-widget elementor-widget-text-editor" data-id="5b4a3ea" data-element_type="widget" data-widget_type="text-editor.default">
                         <div class="elementor-widget-container">
-                           <p>All rigths reserverd® Conflux Punk</p>
+                           <p>All rigths reserverd® Galactic Punk</p>
                         </div>
                      </div>
                   </div>
