--- a/index.html
+++ b/index.html
@@ -2020,7 +2020,7 @@
                               <span class="elementor-headline-dynamic-text"> IMPROVEMENT<br /> </span>
                               </span>
                               <br />
-                              <span class="elementor-headline-plain-text elementor-headline-text-wrapper">Conflux Punk Nft Token</span>
+                              <span class="elementor-headline-plain-text elementor-headline-text-wrapper">Galactic Punk Nft Token</span>
                            </h3>
                         </div>
                      </div>
