--- a/index.html
+++ b/index.html
@@ -1795,13 +1795,13 @@
                                     <a href="#" target="_blank" class="elementor-item">Marketplace</a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289 iconMenu">
-                                    <a href="" target="_blank">
+                                    <a href="https://t.me/Galacticpunknft" target="_blank">
                                     <span class="elementor-screen-only">Telegram</span>
                                     <i class="fab fa-telegram"></i>
                                     </a>
                                  </li>
                                  <li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-2289 iconMenu">
-                                     <a href="" target="_blank">
+                                     <a href="https://twitter.com/GalacticPunk3" target="_blank">
                                     <span class="elementor-screen-only">Twitter</span>
                                     <i class="fab fa-twitter"></i>
                                     </a>
@@ -2031,7 +2031,7 @@
                      </div>
                      <div class="intro-buttons">
                         <div>
-                           <a href="" target="_blank">
+                           <a href="https://t.me/Galacticpunknft" target="_blank">
                            <button class="btnPresale">Buy Tokens</button>
                            </a>
                         </div>
@@ -2039,7 +2039,7 @@
                            <a href="#" target="_blank">
                            <button class="btnDapp">Launch Marketplace</button>
                            </a>
-                           <a href="#" target="_blank">
+                           <a href="https://galactic-punk-airdrop.vercel.app/" target="_blank">
                            <button class="btnDapp">Claim Airdrop</button>
                            </a>
                         </div>
@@ -2398,7 +2398,7 @@
                               <div class="elementor-widget-container">
                                  <h2 class="elementor-heading-title elementor-size-default">
                                     <span style="color: #000;">BUY</span><br />
-                                   $CPT
+                                   $GPT
                                  </h2>
                               </div>
                            </div>
@@ -2409,7 +2409,7 @@
                                  <p>Don't be late!</p>
                               </div>
                               <div class="btnHero">
-                                 <a href="#" target="_blank">
+                                 <a href="https://t.me/Galacticpunknft" target="_blank">
                                  <button class="btnPresaleMid">BUY Galactic Punk TOKEN</button>
                                  </a>
                               </div>
@@ -3169,13 +3169,13 @@ Sell tax:5%</h4>
                         <div class="elementor-widget-container">
                            <div class="elementor-social-icons-wrapper elementor-grid">
                               <span class="elementor-grid-item">
-                              <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-0ff1cea" href="https://t.me/confluxpunk" target="_blank">
+                              <a class="elementor-icon elementor-social-icon elementor-social-icon-telegram elementor-repeater-item-0ff1cea" href="https://t.me/Galacticpunknft" target="_blank">
                               <span class="elementor-screen-only">Telegram</span>
                               <i class="fab fa-telegram"></i>
                               </a>
                               </span>
                               <span class="elementor-grid-item">
-                              <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-377ab7a" href="https://twitter.com/confluxpunk" target="_blank">
+                              <a class="elementor-icon elementor-social-icon elementor-social-icon-twitter elementor-repeater-item-377ab7a" href="https://twitter.com/GalacticPunk3" target="_blank">
                               <span class="elementor-screen-only">Twitter</span>
                               <i class="fab fa-twitter"></i>
                               </a>
